--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f22de0f911.js" crossorigin="anonymous"></script>
+    <script src="index.js" defer></script>
 
     <title>Youtube mobile</title>
 </head>
@@ -30,104 +31,107 @@
         </video>
     </section>
 
-    <!-- Video Info-->
-    <section class="info">
+    <div class="infoAndUpNext">
 
-        <div class="metadata">
-            <ul class="hashtags">
-                <li>#notypeboi</li>
-                <li>#notypebeats</li>
-                <li>#Changhee</li>
-            </ul>
-            <div class="titleAndButton">
-                <span class="title"> Clone Coding:Youte Mobile Websites + notypeboi chang hee in LVRSZ Fake
-                    Coding:Youte Mobile Websites + notypeboi chang hee in LVRSZ Clone Coding:Youte Mobile Websites +
-                    notypeboi chang hee in LVRSZ</span>
-                <button class="moreBtn">
-                    <i class=" fas fa-caret-down"></i>
-                </button>
-            </div>
+        <!-- Video Info-->
+        <section class="info">
 
-            <span class="view">1M views 1months ago</span>
-
-        </div>
-
-
-        <div class="action">
-            <li><button>
-                    <i class="active fas fa-thumbs-up"></i><span> 1K</span>
-                </button></li>
-            <li><button>
-                    <i class=" fas fa-thumbs-down"></i><span>0</span>
-                </button></li>
-            <li><button>
-                    <i class=" fas fa-share"></i><span>Share</span>
-                </button></li>
-            <li><button>
-                    <i class=" fas fa-plus"></i><span>Save</span>
-                </button></li>
-            <li><button>
-                    <i class=" fab fa-font-awesome-flag"></i><span>Report</span>
-                </button></li>
-        </div>
-        <!-- Channel Description-->
-        <div class="channel">
             <div class="metadata">
-                <img src="images/money.jpg" />
-                <div class="info">
-                    <span class="name">notypeboi's world</span>
-                    <span class="subscribers">1M subscribers</span>
+                <ul class="hashtags">
+                    <li>#notypeboi</li>
+                    <li>#notypebeats</li>
+                    <li>#Changhee</li>
+                </ul>
+                <div class="titleAndButton">
+                    <span class="title clamp"> Clone Coding:Youte Mobile Websites + notypeboi chang hee in LVRSZ Fake
+                        Coding:Youte Mobile Websites + notypeboi chang hee in LVRSZ Clone Coding:Youte Mobile Websites +
+                        notypeboi chang hee in LVRSZ</span>
+                    <button class="moreBtn">
+                        <i class=" fas fa-caret-down"></i>
+                    </button>
                 </div>
+
+                <span class="view">1M views 1months ago</span>
 
             </div>
-            <button class="subscribe">SUBCRIBE</button>
-        </div>
-    </section>
 
-    <section class="UpNext">
-        <span class="title">Up next</span>
-        <ul>
-            <li class="item">
-                <div class="img"> <img src="images/1.jpg" alt="" /></div>
-                <div class="info">
-                    <span class="title">Yeezus</span>
 
-                    <span class="name">Kanye west</span>
-                    <span class="views">111K views</span>
-                </div>
-                <button class="moreBtn">
-                    <i class=" fas fa-ellipsis-v"></i>
-                </button>
-            </li>
-
-            <li class="item">
-                <div class="img"> <img src="images/2.jpg" alt="" /></div>
-                <div class="info">
-
-                    <span class="title">Yeezus</span>
-
-                    <span class="name">Kanye west</span>
-                    <span class="views">111K views</span>
-                </div>
-                <button class="moreBtn">
-                    <i class=" fas fa-ellipsis-v"></i>
-                </button>
-            </li>
-
-            <li class="item">
-                <div class="img"> <img src="images/3.jpg" alt="" /></div>
-                <div class="info">
-                    <span class="title">Yeezus</span>
-                    <span class="name">Kanye west</span>
-                    <span class="views">111K views</span>
+            <div class="action">
+                <li><button>
+                        <i class="active fas fa-thumbs-up"></i><span> 1K</span>
+                    </button></li>
+                <li><button>
+                        <i class=" fas fa-thumbs-down"></i><span>0</span>
+                    </button></li>
+                <li><button>
+                        <i class=" fas fa-share"></i><span>Share</span>
+                    </button></li>
+                <li><button>
+                        <i class=" fas fa-plus"></i><span>Save</span>
+                    </button></li>
+                <li><button>
+                        <i class=" fab fa-font-awesome-flag"></i><span>Report</span>
+                    </button></li>
+            </div>
+            <!-- Channel Description-->
+            <div class="channel">
+                <div class="metadata">
+                    <img src="images/money.jpg" />
+                    <div class="info">
+                        <span class="name">notypeboi's world</span>
+                        <span class="subscribers">1M subscribers</span>
+                    </div>
 
                 </div>
-                <button class="moreBtn">
-                    <i class=" fas fa-ellipsis-v"></i>
-                </button>
-            </li>
-        </ul>
-    </section>
+                <button class="subscribe">SUBCRIBE</button>
+            </div>
+        </section>
+        <section class="UpNext">
+            <span class="title">Up next</span>
+            <ul>
+                <li class="item">
+                    <div class="img"> <img src="images/1.jpg" alt="" /></div>
+                    <div class="info">
+                        <span class="title">Yeezus</span>
+
+                        <span class="name">Kanye west</span>
+                        <span class="views">111K views</span>
+                    </div>
+                    <button class="moreBtn">
+                        <i class=" fas fa-ellipsis-v"></i>
+                    </button>
+                </li>
+
+                <li class="item">
+                    <div class="img"> <img src="images/2.jpg" alt="" /></div>
+                    <div class="info">
+
+                        <span class="title">Yeezus</span>
+
+                        <span class="name">Kanye west</span>
+                        <span class="views">111K views</span>
+                    </div>
+                    <button class="moreBtn">
+                        <i class=" fas fa-ellipsis-v"></i>
+                    </button>
+                </li>
+
+                <li class="item">
+                    <div class="img"> <img src="images/3.jpg" alt="" /></div>
+                    <div class="info">
+                        <span class="title">Yeezus</span>
+                        <span class="name">Kanye west</span>
+                        <span class="views">111K views</span>
+
+                    </div>
+                    <button class="moreBtn">
+                        <i class=" fas fa-ellipsis-v"></i>
+                    </button>
+                </li>
+            </ul>
+        </section>
+    </div>
+
 </body>
 
 </html>
